--- a/index.html
+++ b/index.html
@@ -921,7 +921,7 @@
             </ul>
         </div>
         <div class="copyright">
-            <p><i class="fa-regular fa-copyright"></i> All rights reserved</p>
+            <p><i class="fa-regular fa-copyright"></i> All rights reserved. Created By Bijay Rauniyar</p>
         </div>
     </footer>
     
