--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="index.css">
  
     <title>Ecommerce</title>
+    <!-- simple but impactful ecommerce website front end only -->
 </head>
 <body>
     <header>
