--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                     </div>
                     
                 </div>
+                <!-- drop menu -->
                 <div class="icon-titles">
                    <a href=""> <i class="fa-solid fa-cart-shopping"></i>
                     <h3>Cart</h3></a>
